# vkr

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  manage.py  pyproject.toml
api/: admin.py  class_views.py  forms.py  models.py  views.py
api/migrations/: 0001_initial.py  0002_buildings_document_types_document_users_documents_and_more.py  0002_user_study_group.py  0003_alter_document_file.py
api/utilities/: db_requests.py  utilities.py
static/css/: base.css  dutytable.css  image.css  residents_table.css  sidebar.css
static/js/: duty_table.js
templates/: base.html  sidebar.html  table_for_duty_list.html  table_for_duty_list_home.html  table_for_section_residents.html  test.html  test_template.html
templates/registration/: login.html
templates/views/: documents.html  duty_list.html  faq.html  home.html  my_cabinet.html  residents_list.html  test.html
templatetags/: custom_filters.py
vkr/: settings.py  urls.py
