[tool.poetry]
name = "vkr"
version = "0.1.0"
description = ""
authors = ["Givin22 <shmakovdanil061@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
psycopg = {extras = ["binary"], version = "^3.1.18"}
django-bootstrap5 = "^24.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
